Adjust alignment (CSS fixes)

--- a/src/App.css
+++ b/src/App.css
@@ -1,34 +1,29 @@
-* {
-  box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-}
-
-body {
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-size: 14px;
-  margin: 1.5rem;
-}
-
-
 textarea {
   font-family: monospace;
   font-size: 0.8rem;
   border-radius: 2px;
 }
 
-.input-form {
-  max-width: 30rem;
+.customiser, .input-box {
+  width: 30rem;
+  padding: 0.2rem;
 }
+
+.flex-apart {
+  display: flex;
+  justify-content: space-between
+}
+
 
 textarea {
   width: 100%;
 }
-form button {
+
+button {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 1rem;
   padding: 0.7rem 1rem 0.7rem 1rem;
-  border-radius: 2px;
+  border-radius: 0.5rem;
   box-sizing: border-box;
 }
 
@@ -38,7 +33,7 @@ form button {
 }
 
 .half-btn {
-  width: 50%;
+  width: 14rem;
 }
 
 table {
@@ -60,4 +55,24 @@ td {
 
 .custom-select input, select {
   margin: 0.2rem 2rem 0.4rem 0;
+}
+
+.grid {
+  margin-top: 2rem;
+}
+
+.grid-control button{
+  margin: 0 0.8rem 0.8rem 0;
+}
+
+.counter {
+  font-size: 1.2rem;
+}
+
+.App {
+  margin: 0 auto 0 auto;
+  max-width: 780px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
